// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Nested Environments Environments Intermixed 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{a}{\\begin{b}}{\\end{b}}\\newenvironment{b}{x}{y}\\begin{a} ... \\end{b}\\begin{b}\\end{a}" display="block">
  <mi data-latex="x">x</mi>
  <mo data-latex=".">.</mo>
  <mo data-latex=".">.</mo>
  <mo data-latex=".">.</mo>
  <mi data-latex="y">y</mi>
  <mi data-latex="x">x</mi>
  <mi data-latex="y">y</mi>
</math>"
`;

exports[`Nested Environments Environments Nested 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{boxed}{\\begin{array}{|c|c|}\\hline}{\\\\\\hline\\end{array}}\\begin{boxed}\\begin{boxed}a&amp;b\\\\c&amp;d\\end{boxed} &amp; X \\end{boxed}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" columnlines="solid" framespacing=".5em .125em" frame="solid" data-latex="{array}">
    <mtr data-latex="{|c|c|}">
      <mtd>
        <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" columnlines="solid" framespacing=".5em .125em" frame="solid" data-latex="{array}">
          <mtr data-latex="{|c|c|}">
            <mtd>
              <mi data-latex="a">a</mi>
            </mtd>
            <mtd>
              <mi data-latex="b">b</mi>
            </mtd>
          </mtr>
          <mtr data-latex="{|c|c|}">
            <mtd>
              <mi data-latex="c">c</mi>
            </mtd>
            <mtd>
              <mi data-latex="d">d</mi>
            </mtd>
          </mtr>
        </mtable>
      </mtd>
      <mtd>
        <mi data-latex="X">X</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Nested Environments Nested Begins 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{a}{x}{y}\\newenvironment{b}{p}{q}\\begin{a}\\begin{b}X\\end{b}\\end{a}" display="block">
  <mi data-latex="x">x</mi>
  <mi data-latex="p">p</mi>
  <mi data-latex="X">X</mi>
  <mi data-latex="q">q</mi>
  <mi data-latex="y">y</mi>
</math>"
`;

exports[`Nested Environments Newenvironment with Begin 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{boxed}{\\begin{array}{|c|c|}\\hline}{\\\\\\hline\\end{array}}\\begin{boxed}a&amp;b\\\\c&amp;d\\end{boxed}" display="block">
  <mtable columnspacing="1em" rowspacing="4pt" columnalign="center center" columnlines="solid" framespacing=".5em .125em" frame="solid" data-latex="{array}">
    <mtr data-latex="{|c|c|}">
      <mtd>
        <mi data-latex="a">a</mi>
      </mtd>
      <mtd>
        <mi data-latex="b">b</mi>
      </mtd>
    </mtr>
    <mtr data-latex="{|c|c|}">
      <mtd>
        <mi data-latex="c">c</mi>
      </mtd>
      <mtd>
        <mi data-latex="d">d</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`Newcommand Ams Let Bar 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\b\\lvert\\let\\lvert\\langle\\vert\\b\\lvert" display="block">
  <mo data-mjx-texclass="ORD" fence="false" stretchy="false" data-latex="\\vert">|</mo>
  <mo data-mjx-texclass="OPEN" stretchy="false" data-latex="\\b">|</mo>
  <mo fence="false" stretchy="false" data-latex="\\lvert">&#x27E8;</mo>
</math>"
`;

exports[`Newcommand Ams Let Bar Stretchy 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\b\\lvert\\let\\lvert\\langle\\left\\b q \\right\\lvert" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\b\\lvert\\let\\lvert\\langle\\left\\b q \\right\\lvert">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\b ">|</mo>
    <mi data-latex="q">q</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\lvert">&#x27E8;</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Content 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\begin{myHeartEnv}  2+3\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mn data-latex="2">2</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="3">3</mn>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Empty 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\begin{myHeartEnv}\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Nested Double 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\newenvironment{yourHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\begin{myHeartEnv}\\begin{yourHeartEnv}a\\end{yourHeartEnv}\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="a">a</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Nested Double 2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\newenvironment{yourHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\newenvironment{theirHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\begin{myHeartEnv}\\begin{yourHeartEnv}a\\end{yourHeartEnv}\\begin{theirHeartEnv}b\\end{theirHeartEnv}\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="a">a</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="b">b</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Nested Triple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\newenvironment{yourHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\newenvironment{theirHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\begin{myHeartEnv}\\begin{yourHeartEnv}a\\begin{theirHeartEnv}b\\end{theirHeartEnv}\\end{yourHeartEnv}\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="a">a</mi>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="b">b</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Color v2 Newenvironment Nested Triple Text 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{myHeartEnv}{\\color{purple}{\\heartsuit}\\kern-2.5pt\\color{green}{\\heartsuit}}{\\text{ forever}}\\newenvironment{yourHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\newenvironment{theirHeartEnv}{\\color{blue}{\\heartsuit}\\kern-2.5pt\\color{black}{\\heartsuit}}{\\text{ never}}\\begin{myHeartEnv}\\begin{yourHeartEnv}a\\begin{theirHeartEnv}b\\end{theirHeartEnv}c\\end{yourHeartEnv}d\\end{myHeartEnv}" display="block">
  <mstyle mathcolor="purple" data-latex="\\color{purple}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="green" data-latex="\\color{green}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="a">a</mi>
  <mstyle mathcolor="blue" data-latex="\\color{blue}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mspace width="-2.5pt" linebreak="nobreak" data-latex="\\kern-2.5pt"></mspace>
  <mstyle mathcolor="black" data-latex="\\color{black}{\\heartsuit}">
    <mi mathvariant="normal" data-latex="\\heartsuit">&#x2661;</mi>
  </mstyle>
  <mi data-latex="b">b</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mi data-latex="c">c</mi>
  <mtext data-latex="\\text{ never}">&#xA0;never</mtext>
  <mi data-latex="d">d</mi>
  <mtext data-latex="\\text{ forever}">&#xA0;forever</mtext>
</math>"
`;

exports[`Newcommand Def Double Let 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\bar{h}\\let\\fooi\\bar\\def\\fooii{\\bar}\\fooi +\\fooii\\def\\bar{g}\\fooi +\\fooii" display="block">
  <mi data-latex="h">h</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="\\def\\bar{g}">h</mi>
  <mi data-latex="h">h</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="g">g</mi>
</math>"
`;

exports[`Newcommand Def Hash Replacement 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\x#1{\\def\\y##1#1{[##1]}\\y} \\x\\X abc \\X" display="block">
  <mo data-latex="[" stretchy="false">[</mo>
  <mi data-latex="a">a</mi>
  <mi data-latex="b">b</mi>
  <mi data-latex="c">c</mi>
  <mo data-latex="]" stretchy="false">]</mo>
</math>"
`;

exports[`Newcommand Def Let 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\bar[#1]#2{#1 + #2}\\bar[a]{b}\\let\\foo\\bar\\foo[c]{d}" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="\\let\\foo\\bar">b</mi>
  <mi data-latex="c">c</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="d">d</mi>
</math>"
`;

exports[`Newcommand Def Optional Brace 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\bar[#1]#2{#1 + #2}\\bar[{a}]{b}" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`Newcommand Def Options CS 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\bar[#1]#2{#1 + #2}\\bar[\\sqrt{2}]{b}" display="block">
  <msqrt data-latex="\\sqrt{2}">
    <mn data-latex="2">2</mn>
  </msqrt>
  <mo data-latex="+">+</mo>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`Newcommand Def ReDef 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\foo{a + b}\\foo\\def\\foo#1{a #1 b}\\foo{-}\\def\\foo#1#2{#2 #1 b}\\foo{-}{x}" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="\\def\\foo#1{a #1 b}">b</mi>
  <mi data-latex="a">a</mi>
  <mo data-latex="-">&#x2212;</mo>
  <mi data-latex="\\def\\foo#1#2{#2 #1 b}">b</mi>
  <mi data-latex="x">x</mi>
  <mo data-latex="-">&#x2212;</mo>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`Newcommand Def Template Brace Removal 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\test#1\\end{\\text{#1}} \\test{a b}\\end" display="block">
  <mtext data-latex="\\text{a b}">a b</mtext>
</math>"
`;

exports[`Newcommand Def Template Brace Retention 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\test#1\\end{\\text{#1}} \\test{a}{b}\\end" display="block">
  <mtext data-latex="\\text{{a}{b}}">{a}{b}</mtext>
</math>"
`;

exports[`Newcommand Def Template Matching 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\ending{+}\\def\\test#1\\end{[#1]} \\test a\\ending b\\end" display="block">
  <mo data-latex="[" stretchy="false">[</mo>
  <mi data-latex="a">a</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="b">b</mi>
  <mo data-latex="]" stretchy="false">]</mo>
</math>"
`;

exports[`Newcommand Let Angle Circular 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lp\\langle\\let\\rp\\rangle\\let\\mp\\rp\\left\\lp \\frac{a}{b}\\middle\\mp c \\right\\rp" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\lp\\langle\\let\\rp\\rangle\\let\\mp\\rp\\left\\lp \\frac{a}{b}\\middle\\mp c \\right\\rp">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\lp ">&#x27E8;</mo>
    <mfrac data-latex="\\frac{a}{b}">
      <mi data-latex="a">a</mi>
      <mi data-latex="b">b</mi>
    </mfrac>
    <mrow data-mjx-texclass="CLOSE"></mrow>
    <mo data-latex="\\middle\\mp ">&#x27E9;</mo>
    <mrow data-mjx-texclass="OPEN" data-latex="\\middle\\mp"></mrow>
    <mi data-latex="c">c</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\rp">&#x27E9;</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Let Brace 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\be{ \\be a}" display="block">
  <mrow data-mjx-texclass="ORD" data-latex="{a}">
    <mi data-latex="a">a</mi>
  </mrow>
</math>"
`;

exports[`Newcommand Let Brace Delim 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lb=\\{ \\lb \\frac{1}{2} \\}" display="block">
  <mo fence="false" stretchy="false" data-latex="\\lb">{</mo>
  <mfrac data-latex="\\frac{1}{2}">
    <mn data-latex="1">1</mn>
    <mn data-latex="2">2</mn>
  </mfrac>
  <mo fence="false" stretchy="false" data-latex="\\}">}</mo>
</math>"
`;

exports[`Newcommand Let Brace Equal 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\be={ \\be a}" display="block">
  <mrow data-mjx-texclass="ORD" data-latex="{a}">
    <mi data-latex="a">a</mi>
  </mrow>
</math>"
`;

exports[`Newcommand Let Brace Equal Stretchy 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lb=\\{\\left\\lb \\frac{1}{2} \\right\\}" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\lb=\\{\\left\\lb \\frac{1}{2} \\right\\}">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\lb ">{</mo>
    <mfrac data-latex="\\frac{1}{2}">
      <mn data-latex="1">1</mn>
      <mn data-latex="2">2</mn>
    </mfrac>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\}">}</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Let Caret 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\car^ a\\car b" display="block">
  <msup data-latex="^b">
    <mi data-latex="a">a</mi>
    <mi data-latex="b">b</mi>
  </msup>
</math>"
`;

exports[`Newcommand Let Circular Character 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\a a\\let\\b b\\a \\b\\let\\c\\a\\let\\a c\\c \\a\\let\\d=\\c\\let\\c\\b\\d \\c" display="block">
  <mi data-latex="a">a</mi>
  <mi data-latex="\\let\\a c">b</mi>
  <mi data-latex="a">a</mi>
  <mi data-latex="\\let\\c\\b">c</mi>
  <mi data-latex="a">a</mi>
  <mi data-latex="b">b</mi>
</math>"
`;

exports[`Newcommand Let Circular Macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\kk\\alpha\\kk\\let\\rr\\beta\\rr\\let\\rr\\kk\\let\\kk\\beta\\kk\\rr" display="block">
  <mi data-latex="\\let\\rr\\beta">&#x3B1;</mi>
  <mi data-latex="\\let\\kk\\beta">&#x3B2;</mi>
  <mi data-latex="\\kk">&#x3B2;</mi>
  <mi data-latex="\\rr">&#x3B1;</mi>
</math>"
`;

exports[`Newcommand Let Fn 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\ll\\sin\\ll(x)" display="block">
  <mi data-latex="\\ll">sin</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
</math>"
`;

exports[`Newcommand Let Fn Circular 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\save\\sin\\let\\sin\\cos\\let\\cos\\tan\\let\\tan\\save\\sin(x)\\cos(x)\\tan(x)" display="block">
  <mi data-latex="\\sin">cos</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
  <mi data-latex="\\cos">tan</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
  <mi data-latex="\\tan">sin</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
</math>"
`;

exports[`Newcommand Let Fn Double 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\ll\\sin\\ll(x)\\let\\rr\\ll\\let\\ll\\cos\\rr(x)\\ll(x)" display="block">
  <mi data-latex="\\ll">sin</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex="\\let\\ll\\cos" stretchy="false">)</mo>
  <mi data-latex="\\rr">sin</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
  <mi data-latex="\\ll">cos</mi>
  <mo data-mjx-texclass="NONE">&#x2061;</mo>
  <mo data-latex="(" stretchy="false">(</mo>
  <mi data-latex="x">x</mi>
  <mo data-latex=")" stretchy="false">)</mo>
</math>"
`;

exports[`Newcommand Let Let 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\al\\alpha\\al\\alpha\\let\\alpha\\beta\\al\\alpha" display="block">
  <mi data-latex="\\al">&#x3B1;</mi>
  <mi data-latex="\\let\\alpha\\beta">&#x3B1;</mi>
  <mi data-latex="\\al">&#x3B1;</mi>
  <mi data-latex="\\alpha">&#x3B2;</mi>
</math>"
`;

exports[`Newcommand Let Overwrite Sqrt Choose 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\sqrt\\choose a\\sqrt b" display="block">
  <mrow data-mjx-texclass="ORD" data-latex="\\let\\sqrt\\choose a\\sqrt b">
    <mrow data-mjx-texclass="OPEN" data-latex="\\biggl (">
      <mo minsize="2.047em" maxsize="2.047em">(</mo>
    </mrow>
    <mfrac linethickness="0">
      <mi data-latex="a">a</mi>
      <mi data-latex="b">b</mi>
    </mfrac>
    <mrow data-mjx-texclass="CLOSE" data-latex="\\biggr )">
      <mo minsize="2.047em" maxsize="2.047em">)</mo>
    </mrow>
  </mrow>
</math>"
`;

exports[`Newcommand Let Paren Circular 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lp(\\let\\rp)\\let\\mp\\rp\\left\\lp \\frac{a}{b}\\middle\\mp c \\right\\rp" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\lp(\\let\\rp)\\let\\mp\\rp\\left\\lp \\frac{a}{b}\\middle\\mp c \\right\\rp">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\lp ">(</mo>
    <mfrac data-latex="\\frac{a}{b}">
      <mi data-latex="a">a</mi>
      <mi data-latex="b">b</mi>
    </mfrac>
    <mrow data-mjx-texclass="CLOSE"></mrow>
    <mo data-latex="\\middle\\mp ">)</mo>
    <mrow data-mjx-texclass="OPEN" data-latex="\\middle\\mp"></mrow>
    <mi data-latex="c">c</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\rp">)</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Let Paren Delim 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lb( \\lb \\frac{1}{2})" display="block">
  <mo fence="false" stretchy="false" data-latex="\\lb">(</mo>
  <mfrac data-latex="\\frac{1}{2}">
    <mn data-latex="1">1</mn>
    <mn data-latex="2">2</mn>
  </mfrac>
  <mo data-latex=")" stretchy="false">)</mo>
</math>"
`;

exports[`Newcommand Let Paren Stretchy 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\lb( \\left\\lb \\frac{1}{2} \\right)" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\lb( \\left\\lb \\frac{1}{2} \\right)">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\lb ">(</mo>
    <mfrac data-latex="\\frac{1}{2}">
      <mn data-latex="1">1</mn>
      <mn data-latex="2">2</mn>
    </mfrac>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right)">)</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Let Relet 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\al\\alpha\\al\\alpha\\let\\al\\aleph\\al\\alpha" display="block">
  <mi data-latex="\\al">&#x3B1;</mi>
  <mi data-latex="\\let\\al\\aleph">&#x3B1;</mi>
  <mi mathvariant="normal" data-latex="\\al">&#x2135;</mi>
  <mi data-latex="\\alpha">&#x3B1;</mi>
</math>"
`;

exports[`Newcommand Newcommand Arg 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\renewcommand{\\sum}[1]{2 #1 3}\\sum{*}" display="block">
  <mn data-latex="2">2</mn>
  <mo data-latex="*">&#x2217;</mo>
  <mn data-latex="3">3</mn>
</math>"
`;

exports[`Newcommand Newcommand Arg Optional 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\renewcommand{\\sum}[2][+]{2 #1 3 #2 4}\\sum{+}\\sum[*]{+}" display="block">
  <mn data-latex="2">2</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="3">3</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="4">4</mn>
  <mn data-latex="2">2</mn>
  <mo data-latex="*">&#x2217;</mo>
  <mn data-latex="3">3</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="4">4</mn>
</math>"
`;

exports[`Newcommand Newcommand Let 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newcommand{\\bar}[2][1]{#1 + #2}\\bar[a]{b}\\let\\foo\\bar\\foo[c]{d}" display="block">
  <mi data-latex="a">a</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="\\let\\foo\\bar">b</mi>
  <mi data-latex="c">c</mi>
  <mo data-latex="+">+</mo>
  <mi data-latex="d">d</mi>
</math>"
`;

exports[`Newcommand Newcommand Optional 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\renewcommand{\\sum}[1][+]{2 #1 3}\\sum\\sum[*]" display="block">
  <mn data-latex="2">2</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="3">3</mn>
  <mn data-latex="2">2</mn>
  <mo data-latex="*">&#x2217;</mo>
  <mn data-latex="3">3</mn>
</math>"
`;

exports[`Newcommand Newcommand Simple 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newcommand{\\sum}{2 + 3}\\sum" display="block">
  <mn data-latex="2">2</mn>
  <mo data-latex="+">+</mo>
  <mn data-latex="3">3</mn>
</math>"
`;

exports[`Newcommand Newenvironment Arg Optional 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\renewenvironment{argument}[2][a]{\\textbf{Argument #1(#2):}}{aa}\\begin{argument}[c]{3}b\\end{argument}" display="block">
  <mtext mathvariant="bold" data-latex="\\textbf{Argument c(3):}">Argument c(3):</mtext>
  <mi data-latex="b">b</mi>
  <mi data-latex="a">a</mi>
  <mi data-latex="a">a</mi>
</math>"
`;

exports[`Newcommand Newenvironment Optional 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{argument}[1][a]{\\textbf{Argument #1:}}{aa}\\begin{argument}[c]b\\end{argument}" display="block">
  <mtext mathvariant="bold" data-latex="\\textbf{Argument c:}">Argument c:</mtext>
  <mi data-latex="b">b</mi>
  <mi data-latex="a">a</mi>
  <mi data-latex="a">a</mi>
</math>"
`;

exports[`Newcommand Newenvironment Optional Noarg 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\newenvironment{argument}[1][a]{\\textbf{Argument #1:}}{aa}\\begin{argument}b\\end{argument}" display="block">
  <mtext mathvariant="bold" data-latex="\\textbf{Argument a:}">Argument a:</mtext>
  <mi data-latex="b">b</mi>
  <mi data-latex="a">a</mi>
  <mi data-latex="a">a</mi>
</math>"
`;

exports[`Newcommand Overrides Def overrides existing delimiter as macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\|{x} \\|" display="block">
  <mi data-latex="x">x</mi>
</math>"
`;

exports[`Newcommand Overrides Def overrides let delimiter as macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\test=\\| \\def\\test{x} \\test" display="block">
  <mi data-latex="x">x</mi>
</math>"
`;

exports[`Newcommand Overrides Let of character creates delimiter 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\test=&lt; \\left\\test X \\right\\test" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\test=&lt; \\left\\test X \\right\\test">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\test ">&#x27E8;</mo>
    <mi data-latex="X">X</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\test">&#x27E8;</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Overrides Let of character overrides def 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\test{X}\\let\\test=&lt; \\test" display="block">
  <mo fence="false" stretchy="false" data-latex="\\def\\test{X}\\let\\test=&lt; \\test">&#x27E8;</mo>
</math>"
`;

exports[`Newcommand Overrides Let overrides def macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\test{x} \\let\\test=\\| \\test X \\test" display="block">
  <mo data-mjx-texclass="ORD" fence="false" stretchy="false" data-latex="\\test">&#x2016;</mo>
  <mi data-latex="X">X</mi>
  <mo data-mjx-texclass="ORD" fence="false" stretchy="false" data-latex="\\test">&#x2016;</mo>
</math>"
`;

exports[`Newcommand Overrides Let overrides def macro as delimiter 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\def\\test{x} \\let\\test=\\| \\left\\test X \\right\\test" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\def\\test{x} \\let\\test=\\| \\left\\test X \\right\\test">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\test ">&#x2016;</mo>
    <mi data-latex="X">X</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\test">&#x2016;</mo>
  </mrow>
</math>"
`;

exports[`Newcommand Overrides Let overrides delimiter as macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\|=\\sqrt \\| X" display="block">
  <msqrt data-latex="\\let\\|=\\sqrt \\| X">
    <mi data-latex="X">X</mi>
  </msqrt>
</math>"
`;

exports[`Newcommand Overrides Let overrides existing macro 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\sqrt=\\| \\sqrt X" display="block">
  <mo data-mjx-texclass="ORD" fence="false" stretchy="false" data-latex="\\sqrt">&#x2016;</mo>
  <mi data-latex="X">X</mi>
</math>"
`;

exports[`Newcommand Overrides Let overrides existing macro as delimiter 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\let\\sqrt=\\| \\left\\sqrt X \\right\\sqrt" display="block">
  <mrow data-mjx-texclass="INNER" data-latex="\\let\\sqrt=\\| \\left\\sqrt X \\right\\sqrt">
    <mo data-mjx-texclass="OPEN" data-latex="\\left\\sqrt ">&#x2016;</mo>
    <mi data-latex="X">X</mi>
    <mo data-mjx-texclass="CLOSE" data-latex="\\right\\sqrt">&#x2016;</mo>
  </mrow>
</math>"
`;
